--- a/package.json
+++ b/package.json
@@ -10,11 +10,28 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.0",
+    "cookie-parser": "^1.4.1",
     "ejs": "^2.4.1",
     "express": "^4.13.4",
     "express-load": "^1.1.15",
+    "express-session": "^1.13.0",
+    "helmet": "^1.3.0",
     "method-override": "^2.3.5",
+    "mongo-sanitize": "^1.0.0",
     "mongodb": "^2.1.16",
-    "mongoose": "^4.4.13"
+    "mongoose": "^4.4.13",
+    "mongoose-findorcreate": "^0.1.2",
+    "passport": "^0.3.2",
+    "passport-github": "^1.1.0"
+  },
+  "devDependencies": {
+    "grunt": "^1.0.1",
+    "grunt-contrib-clean": "^1.0.0",
+    "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-cssmin": "^1.0.1",
+    "grunt-contrib-uglify": "^1.0.1",
+    "grunt-ng-annotate": "^2.0.2",
+    "grunt-usemin": "^3.1.1"
   }
 }
