--- a/bower.json
+++ b/bower.json
@@ -16,10 +16,10 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "1.3",
-    "angular-route": "1.3",
-    "bootstrap": "3.3",
-    "angular-resource": "1.3"
+    "angular": "^1.3",
+    "angular-route": "^1.3",
+    "bootstrap": "^3.3",
+    "angular-resource": "^1.3"
   },
   "devDependencies": {
     "angular-mocks": "^1.5.5"
