--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ before_install:
   - npm install -g protractor
   - webdriver-manager update
   - bower install
+install:
+  - npm install
 before_script:
   - grunt
   - cd dist
