--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: node.js
 node_js:
-  - 4.4.3
+  - 0.10
 services:
   - mongodb
 env:
@@ -14,7 +14,7 @@ before_install:
   - npm install -g bower
   - npm install -g grunt-cli
   - npm install -g karma-cli
-  - npm install -g protractor
+  - npm install -g protractor@2
   - webdriver-manager update
   - bower install
 install:
