--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_install:
   - npm install -g bower
   - npm install -g grunt-cli
   - npm install -g karma-cli
-  - npm install -g protractor@2
+  - npm install -g protractor
   - webdriver-manager update
   - bower install
 install:
