--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,9 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+#log files
+debug.log
+
 # =========================
 # Operating System Files
 # =========================
