--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A aplication exercice from MEAN by Flávio Almeida",
   "main": "server.js",
   "scripts": {
+    "start": "node server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
